add action to workflow

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -4,7 +4,7 @@ name: Deploy static content to Pages
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ["main"]
+    branches: [ "main" ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -38,6 +38,10 @@ jobs:
         with:
           # Upload entire repository
           path: '.'
+
+      - name: Copy resources folder
+        run: cp -a ./composeResources ./composeResources
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
