add action to workflow

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -39,8 +39,8 @@ jobs:
           # Upload entire repository
           path: '.'
 
-      - name: Copy resources folder
-        run: cp -a ./composeResources ./composeResources
+      #- name: Copy resources folder
+       # run: cp -a ./composeResources ./composeResources
 
       - name: Deploy to GitHub Pages
         id: deployment
